# videoparser-ng

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Dockerfile.alpine  Doxyfile  LICENSE.md  LICENSE.txt  LICENSES.txt  METRICS.md  README.md  REQUIREMENT_SPECIFICATION_20251208.md  VP9_Parsing.md  output.txt  release.sh
.github/workflows/: docker-build.yml  release-binaries.yml
VideoParser/: CMakeLists.txt  VideoParser.cpp  VideoParser.h
VideoParser/include/: shared.h
VideoParserCli/: CMakeLists.txt  main.cpp
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_aabfeea324d07b5811fa168dcfc4a7a3.html  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
docs/html/d0/dc5/: md_DEVELOPERS.html
docs/html/d2/dd0/: classvideoparser_1_1VideoParser.html  classvideoparser_1_1VideoParser.js
docs/html/d4/dcb/: structvideoparser_1_1SequenceInfo.html  structvideoparser_1_1SequenceInfo.js
docs/html/d7/dfe/: structvideoparser_1_1FrameInfo.html  structvideoparser_1_1FrameInfo.js
docs/html/d9/d1c/: classvideoparser_1_1VideoParser-members.html
docs/html/dd/d7f/: structvideoparser_1_1FrameInfo-members.html
docs/html/df/d7d/: structvideoparser_1_1SequenceInfo-members.html
docs/html/search/: all_0.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_1.js  pages_10.js  pages_11.js  pages_12.js  pages_13.js  pages_15.js  pages_17.js  pages_18.js  pages_1a.js  pages_2.js  pages_3.js  pages_4.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  pages_b.js  (+14 more)
hooks/: pre-commit
test/: compare_parsers.py  reencode_videos.sh  test-cli.py  test.py
test/legacy/: test.py
util/: build-cmake.sh  build-ffmpeg.sh  build-libaom.sh  generate-docs.sh  generate-test.videos.sh  push-ffmpeg-changes.sh  rebase-common.sh  rebase-ffmpeg.sh  rebase-libaom.sh  show-ffmpeg-diff.sh
